feat: Google Cloud Functions ベースの競合企業ニュース自動収集システム実装
- Google Cloud Functions + TypeScript でのバックエンド実装
- Secret Manager 統合による本番環境でのシークレット管理
- RSS自動収集・AI重複排除・翻訳・要約機能
- Slack日次・週次レポート配信機能
- エラー通知機能（メンション付き）
- Playwright E2Eテストシナリオ
- フロントエンド管理画面（HTML + JavaScript）

主要機能:
- 情報収集: RSS自動収集、重複排除、AI分析
- LLM処理: GPT-4による翻訳・要約・重要度評価
- Slack配信: 日次レポート（重要度順）、週次レポート（戦略分析）
- エラー処理: 設定ユーザーへのメンション付き通知
- シークレット管理: 本番環境ではSecret Manager、開発環境では環境変数

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
     "test:report": "playwright show-report",
-    "dev": "echo 'Starting development server...' && sleep 5",
+    "dev": "node server.js",
     "install:browsers": "playwright install"
   },
   "devDependencies": {
