--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -17,17 +17,18 @@
     "node": "20"
   },
   "dependencies": {
+    "axios": "^1.7.4",
+    "dotenv": "^17.2.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
     "openai": "^4.56.0",
-    "axios": "^1.7.4",
     "rss-parser": "^3.13.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.8.0",
     "@types/node": "^20.0.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.8.0"
   },
   "private": true
 }
